--- a/myWork.html
+++ b/myWork.html
@@ -37,10 +37,10 @@
                     </div>
                 </div>
                 <nav class="leftBox_nav">
-                    <a class="aboutMe" href="./index.html">About Me</a>
-                    <a class="myWork current-page" href="./myWork.html">My Work</a>
-                    <a class="contact" href="./contact.html">Contact</a>
-                    <a class="resume" href="./resume.html">Resume</a>
+                    <a class="aboutMe" href="index.html">About Me</a>
+                    <a class="myWork current-page" href="myWork.html">My Work</a>
+                    <a class="contact" href="contact.html">Contact</a>
+                    <a class="resume" href="resume.html">Resume</a>
                 </nav>
 
                 <ul class="social">
@@ -72,19 +72,19 @@
                 </ul>
             </menu>
 			<div class="grid" id="grid">
-				<div class="child" id="Notflix"><img src="/images/Notflix_logo_Res_64.png" id="image" />
+				<div class="child" id="Notflix"><img src="images/Notflix_logo_Res_64.png" id="image" />
                     <a href="https://klous-jan.github.io/Notflicks/src/main.html">
                         <span class="link-spanner"></span>
                     </a>
                 </div>
-                <div class="child" id="child"><img src="/images/logo-2582748_1280.png" id="image" />
+                <div class="child" id="child"><img src="images/logo-2582748_1280.png" id="image" />
                     <a href="">
                         <span class="link-spanner"></span>
                     </a>
                 </div>
 			</div>
 			<div class="bg"></div>
-			<script src="./scripts/childNth.js"></script>
+			<script src="scripts/childNth.js"></script>
 		</div>
 	</body>
 	<script type="text/javascript"></script>
