--- a/playground.html
+++ b/playground.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Playground</title>
-		<link rel="stylesheet" type="text/css" href="./styles/play.css" />
-		<link rel="stylesheet" type="text/css" href="/styles/index-master.css" />
+		<link rel="stylesheet" type="text/css" href="TEMP_DELETE/play.css" />
+		<link rel="stylesheet" type="text/css" href="styles/index-master.css" />
 		<script src="https://kit.fontawesome.com/3607a05477.js" crossorigin="anonymous"></script>
 		<!-- <script src="/scripts/cards.js"></script> -->
 	</head>
@@ -101,8 +101,8 @@
 			<div class="rightBar next-button"></div>
 		</div>
 		<div class="bg"></div>
-		<script src="/scripts/injector.js"></script>
-		<script src="/scripts/cards.js"></script>
+		<script src="scripts/injector.js"></script>
+		<script src="scripts/cards.js"></script>
 		<script>
 			includeHTML();
 		</script>
