--- a/myWork.html
+++ b/myWork.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio Projects</title>
-		<link rel="stylesheet" type="text/css" href="./styles/index-master.css">
-		<link rel="stylesheet" type="text/css" href="/styles/myWork.css" />
+		<link rel="stylesheet" type="text/css" href="styles/index-master.css">
+		<link rel="stylesheet" type="text/css" href="styles/myWork.css" />
 	</head>
 
 
