--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="stylesheet" type="text/css" href="./styles/index-master.css">
+    <link rel="stylesheet" type="text/css" href="styles/index-master.css">
+    <link rel="stylesheet" type="text/css" href="styles/contact.css">
 </head>
 
 <body>
