--- a/resume.html
+++ b/resume.html
@@ -5,8 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Nickolaus Janak Resume</title>
-		<link rel="stylesheet" type="text/css" href="./styles/index-master.css" />
-		<link rel="stylesheet" type="text/css" href="./styles/resume.css" />
+		<link rel="stylesheet" type="text/css" href="styles/index-master.css" />
+		<link rel="stylesheet" type="text/css" href="styles/resume.css" />
 	</head>
 
 	<body>
@@ -34,10 +34,10 @@
                 </div>
             </div>
             <nav class="leftBox_nav">
-                <a class="aboutMe" href="./index.html">About Me</a>
-                <a class="myWork" href="./myWork.html">My Work</a>
-                <a class="contact" href="./contact.html">Contact</a>
-                <a class="resume current-page" href="./resume.html">Resume</a>
+                <a class="aboutMe" href="index.html">About Me</a>
+                <a class="myWork" href="myWork.html">My Work</a>
+                <a class="contact" href="contact.html">Contact</a>
+                <a class="resume current-page" href="resume.html">Resume</a>
             </nav>
 
             <ul class="social">
