--- a/contact.html
+++ b/contact.html
@@ -35,10 +35,10 @@
             </div>
         </div>
         <nav class="leftBox_nav">
-            <a class="aboutMe" href="./index.html">About Me</a>
-            <a class="myWork" href="./myWork.html">My Work</a>
-            <a class="contact current-page" href="./contact.html">Contact</a>
-            <a class="resume" href="./resume.html">Resume</a>
+            <a class="aboutMe" href="index.html">About Me</a>
+            <a class="myWork" href="myWork.html">My Work</a>
+            <a class="contact current-page" href="contact.html">Contact</a>
+            <a class="resume" href="resume.html">Resume</a>
         </nav>
 
         <ul class="social">
@@ -149,9 +149,83 @@
                     <!-- <label class="labelText" for="cLoc">Company Location</label> -->
                     <select id="cLoc" class="inDec" name="country">
                         <option value="CompanyLocation" hidden disabled selected required>*Where is your company located?</option>
-                        <option value="australia">Australia</option>
-                        <option value="canada">Canada</option>
-                        <option value="usa">USA</option>
+                        <optgroup label="United States">United States
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="DC">District Of Columbia</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
+                            <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
+                        </optgroup>
+                        <optgroup label="United States Outlying Territories">United States Outlying Territories
+                            <option value="AS">American Samoa</option>
+                            <option value="GU">Guam</option>
+                            <option value="MP">Northern Mariana Islands</option>
+                            <option value="PR">Puerto Rico</option>
+                            <option value="UM">United States Minor Outlying Islands</option>
+                            <option value="VI">Virgin Islands</option>
+                        </optgroup>
+                        <optgroup label="Canada">Canada
+                            <option>Alberta</option>
+                            <option>British Columbia</option>
+                            <option>Manitoba</option>
+                            <option>New Brunswick</option>
+                            <option>Newfoundland & Labrador</option>
+                            <option>Northwest Territories</option>
+                            <option>Nova Scotia</option>
+                            <option>Nunavut</option>
+                            <option>Ontario</option>
+                            <option>Prince Edward Island</option>
+                            <option>Québec</option>
+                            <option>Saskatchewan</option>
+                            <option>Yukon</option>
+                        </optgroup>
+                        <optgroup label="Other"><option>Location Not Listed</option></optgroup>
                     </select>
 
                     <!-- <label for="subject">Subject</label> -->
