--- a/index.html
+++ b/index.html
@@ -85,24 +85,22 @@
     </div>
     <div id="rightBox">
         <div class="void" id="void">
-            <div class="crop">
-                <ul id="card-list" style="--count: 10;">
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
-                    <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
-                </ul>
-                <div class="last-circle"></div>
-                <div class="second-circle"></div>
-                <div class="center-circle"></div>
-            </div>
-            <div class="mask"></div>
+            <ul id="card-list" style="--count: 10;">
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/BabyMe.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FamilyPic.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/FlashlightHead.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/GrandpaMeAndDad.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndDozer.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMom.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MeAndMomWedding.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/MochiSleeping.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/StPaddysDay.png" style="height: 100px; width: 100px;"></a></div></li>
+                <li class="cards-all"><div class="card"><img class="imgRotate" src="images/rotate/Veritasium.png" style="height: 100px; width: 100px;"></a></div></li>
+            </ul>
+            <div class="last-circle"></div>
+            <div class="second-circle"></div>
+            <div class="center-circle"></div>
+            <!-- <div class="mask"></div> -->
         </div>
     </div>
     <div class="bg"></div>
