--- a/myWork.html
+++ b/myWork.html
@@ -72,20 +72,38 @@
                 </ul>
             </menu>
 			<div class="grid" id="grid">
-				<div class="child" id="Notflix"><img src="images/Notflix_logo_Res_64.png" id="image" />
+				<div class="child" id="Notflix">
+                    <img src="images/Notflix_logo_Res_64.png" id="image" />
                     <a href="https://klous-jan.github.io/Notflicks/src/main.html">
-                        <span class="link-spanner"></span>
+                        <span class="link-spanner">
+                            <div>
+                                <p>languages</p>
+                                <ul>
+                                    <li>Vanilla JavaScript</li>
+                                    <li>scss</li>
+                                    <li>React</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <p>Made with:</p>
+                                <ul>
+                                    <li>SASS</li>
+                                    <li>JavaScript</li>
+                                    <li>API calls</li>
+                                </ul>
+                            </div>
+                        </span>
                     </a>
                 </div>
-                <div class="child" id="child"><img src="images/logo-2582748_1280.png" id="image" />
+                <div class="child" id="child">
+                    <img src="images/logo-2582748_1280.png" id="image" />
                     <a href="">
                         <span class="link-spanner"></span>
                     </a>
                 </div>
 			</div>
 			<div class="bg"></div>
-			<script src="scripts/childNth.js"></script>
 		</div>
+        <script type="text/javascript" src="scripts/childNth.js"></script>
 	</body>
-	<script type="text/javascript"></script>
 </html>
