--- a/resume.html
+++ b/resume.html
@@ -75,7 +75,7 @@
                         <ul class="headInfo-list">
                             <li><h3 class="headtitleList">klous-jan.github.io</h3></li>
                             <li><h3 class="headtitleList">Seattle, WA</h3></li>
-                            <li><h3 class="headtitleList">nickolaus.janak@gmail.com</h3></li>
+                            <li><h3 class="headtitleList" href="contact.html">nickolaus.janak@gmail.com</h3></li>
                         </ul>
                     </div>
                     <div class="leftSkillsInfo">
@@ -84,28 +84,30 @@
                             <ul class="skill-lists">
                                 <li><h4 class="titleInfo firstInfo">JavaScript</h4></li>
                                 <li><h4 class="titleInfo">React</h4></li>
-                                <li><h4 class="titleInfo">CSS</h4></li>
-                                <li><h4 class="titleInfo">SASS</h4></li>
-                                <li><h4 class="titleInfo">Node.js</h4></li>
+                                <!-- <li><h4 class="titleInfo">CSS</h4></li> -->
+                                <!-- <li><h4 class="titleInfo">SASS</h4></li> -->
+                                <li><h4 class="titleInfo">Node</h4></li>
+                                <li><h4 class="titleInfo">Next</h4></li>
                                 <li><h4 class="titleInfo">SQL</h4></li>
                                 <li><h4 class="titleInfo">Python</h4></li>
                                 <li><h4 class="titleInfo">C#</h4></li>
-                                <li><h4 class="titleInfo">Bootstrap</h4></li>
+                                <!-- <li><h4 class="titleInfo">Bootstrap</h4></li> -->
                                 <li><h4 class="titleInfo">Kotlin</h4></li>
                             </ul>
-                            <li><h3 class="titleList secondSkills">klous-jan.github.io</h3></li>
+                            <li><h3 class="titleList secondSkills">Additional Skills</h3></li>
                             <ul class="skill-lists">
                                 <li><h4 class="titleInfo firstInfo">Adobe Photoshop</h4></li>
                                 <li><h4 class="titleInfo">Adobe Premiere Pro</h4></li>
                                 <li><h4 class="titleInfo">Blender</h4></li>
                                 <li><h4 class="titleInfo">Figma</h4></li>
-                                <li><h4 class="titleInfo">Software Testing</h4></li>
-                                <li><h4 class="titleInfo">SEO Anlysis</h4></li>
-                                <li><h4 class="titleInfo">Responsive Web Design</h4></li>
-                                <li><h4 class="titleInfo">Design Systems</h4></li>
+                                <!-- <li><h4 class="titleInfo">Software Testing</h4></li> -->
+                                <!-- <li><h4 class="titleInfo">SEO Anlysis</h4></li> -->
+                                <!-- <li><h4 class="titleInfo">Responsive Web Design</h4></li> -->
+                                <!-- <li><h4 class="titleInfo">Design Systems</h4></li> -->
                                 <li><h4 class="titleInfo">Unity Engine</h4></li>
                             </ul>
                         </ul>
+                        
                     </div>
                 </div>
                 <article class="rightContainer">
@@ -116,8 +118,16 @@
                     </header>
                     <hr>
                     <section id="experiance">
-                        <h2>Experience</h2>
-                        <p>I’ve worked on a handful of web projects over the years, some of which were for the following organizations:</p>
+                        <!-- <h2>Experience</h2> -->
+                        <!-- <p>I’ve worked on a handful of web projects over the years, some of which were for the following organizations:</p> -->
+                        <ul class="skill-lists">
+                                <li><h4 class="titleInfo firstInfo">Proficient in multiple high-level languages and frameworks.</h4></li>
+                                <li><h4 class="titleInfo">Creative mind for design and flow to ensure projects look as well as they function. </h4></li>
+                                <li><h4 class="titleInfo">Outstanding attention to detail, ensuring projects are complete and functional when presented.</h4></li>
+                                <li><h4 class="titleInfo">Team player attitude when tackling collaborative projects.</h4></li>
+                                <li><h4 class="titleInfo">Analytically driven, adept at interpreting complex information to identify patterns, employing a methodical approach to problem-solving and decision-making to optimize project efficiency and performance</h4></li>
+                            </ul>
+                            <br>
                         <ul id="companies">
                             <li class="company">
                                 <header>
@@ -127,9 +137,9 @@
                                 <hr/>
                                 <p>Creating paths to proficiency with innovative tools and real-world language proficiency tests in over 45 languages. In this position I was regularly testing our applications, identifying and resolving bugs, and collaborating with our development team for effective and timely solutions to meet deadlines.</p>
                                 <ul class="points">
-                                    <li><p>Collaborating with other developers on our team, monitoring the progress of several projects and refine code for deployment</p></li>
-                                    <li><p>First-hand experiance in early-stage product testing, debugging, and quality assurance. Documenting a range of potential issues regarding UI, inclusive language, or security holes.</p></li>
-                                    <li><p>Daily communication with our Head of Technology to verify our team was on schedule for all major releases and hot fixes.</p></li>
+                                    <li><p>Collaborating with other developers on our team, monitoring the progress of several projects and refine code for deployment.</p></li>
+                                    <li><p>First-hand experience in early-stage product testing, debugging, and quality assurance. Documenting a range of potential issues regarding UI, inclusive language, or security holes.</p></li>
+                                    <li><p>Frequent communication with our Head of Technology to ensure team alignment and adherence to schedules for major releases and urgent fixes.</p></li>
                                 </ul>
                             </li>
                             <li class="company">
@@ -141,15 +151,28 @@
                                 <p>A team that provides a wide variety of tech services, including custom software development and corporate training.</p>
                                 <ul class="points">
                                     <li><p>Building custom web pages to meet the specifications of the customer.</p></li>
-                                    <li><p>One on one hands on learning about database structures and calling information from your database</p></li>
-                                    <li><p>Secure coding, ensuring our code was well written and built to elude specific types of malicious attacks or injections</p></li>
+                                    <li><p>Hands-on experience using database structures and calling information from our database.</p></li>
+                                    <li><p>Secure coding, ensuring our code was well written and built to elude specific types of malicious attacks or injections.</p></li>
+                                </ul>
+                            </li>
+                            <li class="company">
+                                <header>
+                                    <h3>Platt Electric<span>Data Specialist</span></h3>
+                                    <span class="period">Jan 2018 - Jul 2021</span>
+                                </header>
+                                <hr/>
+                                <p>Supplier of a broad range of high quality products and services to the utility, industrial, electrical, construction, solar, datacomm/security and commercial markets.</p>
+                                <ul class="points">
+                                    <li><p>Querying and organizing large sets of data and using various Excel functions and features for effective data management.</p></li>
+                                    <li><p>Using formulas, pivot tables, and other analytical tools to derive insights, patterns, and trends from the inventory and company information.</p></li>
+                                    <li><p>Producing comprehensive reports, summaries, and visually impactful representations such as charts and graphs using Excel to effectively communicate data insights, facilitating informed decision-making processes for the company.</p></li>
                                 </ul>
                             </li>
                         </ul>
                         <div id="bot-li"></div>
                     </section>
                     <section id="projects">
-
+                        
                     </section>
                 </article>
             </div>
