--- a/myWork.html
+++ b/myWork.html
@@ -71,7 +71,7 @@
                     </li>
                 </ul>
             </menu>
-			<div class="grid" id="grid">
+			<div class="grid">
 				<div class="child" id="Notflix">
                     <img src="images/Notflix_logo_Res_64.png" id="image" />
                     <a href="https://klous-jan.github.io/Notflicks/src/main.html">
