--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
 
             <ul class="social">
                 <li>
-                    <a class="linkedin" href="https://www.linkedin.com/in/nickolaus-janak/">
+                    <a href="https://www.linkedin.com/in/nickolaus-janak/">
                         <svg class="linkedinSVG" viewBox="-150 242 310 310">
                             <path d="M-77.8,341.7h-62.2c-2.8,0-5,2.2-5,5v199.9c0,2.8,2.2,5,5,5h62.2c2.8,0,5-2.2,5-5V346.7
                                 C-72.8,344-75.1,341.7-77.8,341.7z"/>
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="github" href="https://github.com/Klous-jan">
+                    <a href="https://github.com/Klous-jan">
                         <svg class="githubSVG" viewBox="-289 381 32 32">
                             <path d="M-273,381.4c-8.8,0-16,7.2-16,16c0,7.1,4.6,13.1,10.9,15.2c0.8,0.2,1.1-0.3,1.1-0.8c0-0.4,0-1.4,0-2.7
                             c-4.5,1-5.4-2.2-5.4-2.2c-0.7-1.8-1.8-2.3-1.8-2.3c-1.4-1,0.1-1,0.1-1c1.6,0.1,2.4,1.6,2.4,1.6c1.4,2.4,3.7,1.7,4.7,1.3
@@ -63,6 +63,15 @@
                             c1.3-0.4,2.6-0.5,4-0.5c1.4,0,2.7,0.2,4,0.5c3-2.1,4.4-1.6,4.4-1.6c0.9,2.2,0.3,3.8,0.2,4.2c1,1.1,1.6,2.5,1.6,4.3
                             c0,6.1-3.7,7.5-7.3,7.9c0.6,0.5,1.1,1.5,1.1,3c0,2.1,0,3.9,0,4.4c0,0.4,0.3,0.9,1.1,0.8c6.4-2.1,11-8.1,11-15.2
                             C-257,388.6-264.2,381.4-273,381.4L-273,381.4z"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="src/include/Nickolaus_Janak_Resume_2023.pdf" download>
+                        <svg class="dlSVG" viewBox="0 0 35.00 35.00">
+                            <path d="M29.426 15.535c0 0 0.648-8.743-7.361-9.74-6.866-0.701-8.955 5.679-8.955 5.679s-2.067-1.988-4.873-0.364c-2.51
+                            1.55-2.067 4.388-2.067 4.388s-5.576 1.083-5.576 6.768c0.125 5.677 6.055 5.734 6.055 5.734h11.351l-5-5h3v-6h4v6h3l-5
+                            5h10.467c0 0 5.52 0.006 6.295-5.395 0.369-5.906-5.336-7.070-5.336-7.070z"/>
                         </svg>
                     </a>
                 </li>
@@ -79,44 +88,63 @@
                         </ul>
                     </div>
                     <div class="leftSkillsInfo">
-                        <ul class="skill-headers">
-                            <li><h3 class="titleList">Core Skills</h3></li>
-                            <ul class="skill-lists">
-                                <li><h4 class="titleInfo firstInfo">JavaScript</h4></li>
-                                <li><h4 class="titleInfo">React</h4></li>
-                                <!-- <li><h4 class="titleInfo">CSS</h4></li> -->
-                                <!-- <li><h4 class="titleInfo">SASS</h4></li> -->
-                                <li><h4 class="titleInfo">Node</h4></li>
-                                <li><h4 class="titleInfo">Next</h4></li>
-                                <li><h4 class="titleInfo">SQL</h4></li>
-                                <li><h4 class="titleInfo">Python</h4></li>
-                                <li><h4 class="titleInfo">C#</h4></li>
-                                <!-- <li><h4 class="titleInfo">Bootstrap</h4></li> -->
-                                <li><h4 class="titleInfo">Kotlin</h4></li>
+                        <div id="left-skills">
+                            <ul class="skill-headers">
+                                <li><h3 class="titleList">Core Skills</h3></li>
+                                <ul class="skill-lists">
+                                    <li><h4 class="titleInfo firstInfo">JavaScript</h4></li>
+                                    <li><h4 class="titleInfo">React</h4></li>
+                                    <!-- <li><h4 class="titleInfo">CSS</h4></li> -->
+                                    <!-- <li><h4 class="titleInfo">SASS</h4></li> -->
+                                    <li><h4 class="titleInfo">Node</h4></li>
+                                    <li><h4 class="titleInfo">Next</h4></li>
+                                    <li><h4 class="titleInfo">SQL</h4></li>
+                                    <li><h4 class="titleInfo">Python</h4></li>
+                                    <li><h4 class="titleInfo">C#</h4></li>
+                                    <!-- <li><h4 class="titleInfo">Bootstrap</h4></li> -->
+                                    <li><h4 class="titleInfo">Kotlin</h4></li>
+                                </ul>
+                                <li><h3 class="titleList secondSkills">Additional Skills</h3></li>
+                                <ul class="skill-lists">
+                                    <li><h4 class="titleInfo firstInfo">Adobe Photoshop</h4></li>
+                                    <li><h4 class="titleInfo">Adobe Premiere Pro</h4></li>
+                                    <li><h4 class="titleInfo">Blender</h4></li>
+                                    <li><h4 class="titleInfo">Figma</h4></li>
+                                    <!-- <li><h4 class="titleInfo">Software Testing</h4></li> -->
+                                    <!-- <li><h4 class="titleInfo">SEO Anlysis</h4></li> -->
+                                    <!-- <li><h4 class="titleInfo">Responsive Web Design</h4></li> -->
+                                    <!-- <li><h4 class="titleInfo">Design Systems</h4></li> -->
+                                    <li><h4 class="titleInfo">Unity Engine</h4></li>
+                                </ul>
                             </ul>
-                            <li><h3 class="titleList secondSkills">Additional Skills</h3></li>
-                            <ul class="skill-lists">
-                                <li><h4 class="titleInfo firstInfo">Adobe Photoshop</h4></li>
-                                <li><h4 class="titleInfo">Adobe Premiere Pro</h4></li>
-                                <li><h4 class="titleInfo">Blender</h4></li>
-                                <li><h4 class="titleInfo">Figma</h4></li>
-                                <!-- <li><h4 class="titleInfo">Software Testing</h4></li> -->
-                                <!-- <li><h4 class="titleInfo">SEO Anlysis</h4></li> -->
-                                <!-- <li><h4 class="titleInfo">Responsive Web Design</h4></li> -->
-                                <!-- <li><h4 class="titleInfo">Design Systems</h4></li> -->
-                                <li><h4 class="titleInfo">Unity Engine</h4></li>
-                            </ul>
-                        </ul>
-                        
+                        </div>
+                        <div id="left-dl">
+                            <div id="wrap">
+                                <a href="#" class="btn-slide2">
+                                    <span class="circle2">
+                                        <svg class="dl-icon" viewBox="-3.5 -3.5 42.00 42.00">
+                                            <path d="M29.426 15.535c0 0 0.648-8.743-7.361-9.74-6.866-0.701-8.955 5.679-8.955
+                                            5.679s-2.067-1.988-4.873-0.364c-2.51 1.55-2.067 4.388-2.067 4.388s-5.576 1.083-5.576
+                                            6.768c0.125 5.677 6.055 5.734 6.055 5.734h11.351l-5-5h3v-6h4v6h3l-5 5h10.467c0 0 5.52
+                                            0.006 6.295-5.395 0.369-5.906-5.336-7.070-5.336-7.070z"/>
+                                        </svg>
+                                    </span>
+                                    <span class="title2">resume.png</span>
+                                    <span class="title-hover2">Download</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <article class="rightContainer">
                     <header id="profile-header">
-                        <h1 id="name">Nickolaus<br>Janak</h1>
+                        <div id="profile-header-container">
+                            <h1 id="name">Nickolaus<br>Janak</h1>
+                        </div>
                         <h2>Fullstack Engineer Passionate UI/UX Developer</h2>
-                        <p>I am a quality driven engineer with a main goal of high-performance accessible web design. I strive for excellence, beauty, user-friendly, and scalable products </p>
+                        <hr>
+                        <p>I'm a developer passionate about making websites awesome! I geek out on creating high-performance, easy-to-use web designs that look great and grow with users. Let's build something cool together!</p>
                     </header>
-                    <hr>
                     <section id="experiance">
                         <!-- <h2>Experience</h2> -->
                         <!-- <p>I’ve worked on a handful of web projects over the years, some of which were for the following organizations:</p> -->
