--- a/resume.html
+++ b/resume.html
@@ -120,7 +120,7 @@
                         </div>
                         <div id="left-dl">
                             <div id="wrap">
-                                <a href="#" class="btn-slide2">
+                                <a href="src/include/Nickolaus_Janak_Resume_2023.pdf" class="btn-slide2" download>
                                     <span class="circle2">
                                         <svg class="dl-icon" viewBox="-3.5 -3.5 42.00 42.00">
                                             <path d="M29.426 15.535c0 0 0.648-8.743-7.361-9.74-6.866-0.701-8.955 5.679-8.955
@@ -163,11 +163,11 @@
                                     <span class="period">Nov 2022 - Jul 2023</span>
                                 </header>
                                 <hr/>
-                                <p>Creating paths to proficiency with innovative tools and real-world language proficiency tests in over 45 languages. In this position I was regularly testing our applications, identifying and resolving bugs, and collaborating with our development team for effective and timely solutions to meet deadlines.</p>
+                                <p>Creating paths to proficiency with innovative tools and real-world language proficiency tests in over 45 languages. In this position I played a key role in refining our website to ensure accuracy across multiple target languages. I regularly tested our applications, identified and resolved bugs, and collaborated with our development team to provide effective and timely solutions to meet deadlines.</p>
                                 <ul class="points">
-                                    <li><p>Collaborating with other developers on our team, monitoring the progress of several projects and refine code for deployment.</p></li>
-                                    <li><p>First-hand experience in early-stage product testing, debugging, and quality assurance. Documenting a range of potential issues regarding UI, inclusive language, or security holes.</p></li>
-                                    <li><p>Frequent communication with our Head of Technology to ensure team alignment and adherence to schedules for major releases and urgent fixes.</p></li>
+                                    <li><p>Collaborating with other developers on our team to track the advancement of various projects and refine code for deployment.</p></li>
+                                    <li><p>Direct involvement in initial product testing, debugging, and ensuring quality assurance. Documented potential issues encompassing UI, inclusive language, and security vulnerabilities.</p></li>
+                                    <li><p>Actively engaging in feature development, utilizing problem-solving skills and innovative strategies to enhance user experience and software performance, while ensuring adherence to schedules for major releases and urgent fixes.</p></li>
                                 </ul>
                             </li>
                             <li class="company">
@@ -176,11 +176,11 @@
                                     <span class="period">Jul 2021 - May 2022</span>
                                 </header>
                                 <hr/>
-                                <p>A team that provides a wide variety of tech services, including custom software development and corporate training.</p>
+                                <p>I actively participated in a team specializing in custom software development and corporate training. Engaged in coding, testing, and refining interfaces, I supported diverse projects, fostering skills in front-end and back-end development within a collaborative, innovative environment.</p>
                                 <ul class="points">
-                                    <li><p>Building custom web pages to meet the specifications of the customer.</p></li>
-                                    <li><p>Hands-on experience using database structures and calling information from our database.</p></li>
-                                    <li><p>Secure coding, ensuring our code was well written and built to elude specific types of malicious attacks or injections.</p></li>
+                                    <li><p>Developing tailor-made web pages that meet the specific requirements and specifications of the customer.</p></li>
+                                    <li><p>Practical hands on experience in working with database structures and retrieving information from databases.</p></li>
+                                    <li><p>Implementing secure coding practices to fortify our code against targeted malicious attacks or injections, ensuring robust and resilient code quality.</p></li>
                                 </ul>
                             </li>
                             <li class="company">
@@ -189,7 +189,7 @@
                                     <span class="period">Jan 2018 - Jul 2021</span>
                                 </header>
                                 <hr/>
-                                <p>Supplier of a broad range of high quality products and services to the utility, industrial, electrical, construction, solar, datacomm/security and commercial markets.</p>
+                                <p>At Platt Electric Supply, I took on a significant role focusing on data entry and analysis, supporting the management of our entire inventory of products across multiple markets. I skillfully handled extensive datasets, extracting insights using Excel functions and analytical tools to generate impactful visual reports, supporting both my team and the company.</p>
                                 <ul class="points">
                                     <li><p>Querying and organizing large sets of data and using various Excel functions and features for effective data management.</p></li>
                                     <li><p>Using formulas, pivot tables, and other analytical tools to derive insights, patterns, and trends from the inventory and company information.</p></li>
